menambahkan animasi scroll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- Header -->
     <header>
-      <div class="kontainer header">
+      <div class="kontainer headers">
         <div class="logo">
           <h1>Beli Kawan</h1>
         </div>
@@ -30,4 +30,6 @@
     <!-- Akhir Header -->
     <main></main>
   </body>
+
+  <script src="assets/JS/JavaScrip.js"></script>
 </html>
