--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <nav>
             <ul>
               <li><a>Home</a></li>
-              <li><a>About</a></li>
-              <li><a>Profil</a></li>
-              <li><a>Kontak</a></li>
+              <li><a>Pulsa Prabayar</a></li>
+              <li><a>Paketan</a></li>
+              <li><a>Token Listrik</a></li>
             </ul>
           </nav>
         </div>
