--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
               <li><a>Paketan</a></li>
               <li><a>Token Listrik</a></li>
             </ul>
+            <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+            </div>
           </nav>
         </div>
       </div>
